--- a/SCDC/Base.lproj/Main_iPhone.storyboard
+++ b/SCDC/Base.lproj/Main_iPhone.storyboard
@@ -218,7 +218,7 @@
                                     <segue destination="W7R-69-7mk" kind="push" id="NhT-h4-2GF"/>
                                 </connections>
                             </button>
-                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo2.png" translatesAutoresizingMaskIntoConstraints="NO" id="4m6-WF-5ch">
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LogoNewColor.png" translatesAutoresizingMaskIntoConstraints="NO" id="4m6-WF-5ch">
                                 <rect key="frame" x="65" y="129" width="190" height="177"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -365,8 +365,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="LogoNewColor.png" width="2988" height="2986"/>
         <image name="Rectangle.png" width="1533" height="1758"/>
-        <image name="logo2.png" width="625" height="625"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
