--- a/SCDC/Base.lproj/Main_iPhone.storyboard
+++ b/SCDC/Base.lproj/Main_iPhone.storyboard
@@ -5,6 +5,31 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="ZJc-er-wVX">
+            <objects>
+                <viewController id="RTX-5R-TI0" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Kaa-x9-q4q"/>
+                        <viewControllerLayoutGuide type="bottom" id="nxC-0s-pbp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iO7-Xd-NDm">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BSe-3S-GJV">
+                                <rect key="frame" x="20" y="70" width="280" height="450"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ozr-LN-J8c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1710" y="-779"/>
+        </scene>
         <!--Pass Code View Controller - Login-->
         <scene sceneID="b7o-9B-bAG">
             <objects>
@@ -112,7 +137,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="AvP-Pa-t4S" id="dBv-Sy-fF7"/>
-                        <segue destination="aRO-3g-SMd" kind="push" identifier="temp" id="hVN-OZ-wdo"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hYj-y5-zxL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -232,7 +256,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="studentList" id="zno-2A-TlL">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zno-2A-TlL" id="bi4-yd-Mwn">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -268,9 +292,6 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <segue destination="5uA-Zi-eIL" kind="modal" identifier="unwindToClassList" id="ccc-bl-Xg0"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZoY-fX-Qe2" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="bK8-RY-Hje" userLabel="Exit" sceneMemberID="exit"/>
@@ -478,7 +499,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Calendar.png" width="2988" height="2986"/>
+        <image name="Calendar.png" width="640" height="1136"/>
         <image name="LogoNewColor.png" width="2988" height="2986"/>
         <image name="scdclogo.gif" width="1000" height="800"/>
     </resources>
@@ -487,7 +508,4 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="ccc-bl-Xg0"/>
-    </inferredMetricsTieBreakers>
 </document>
